// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vmware storage hosts actions fetchDatastores doesnt make the ajax request when cluster is not set 1`] = `Object {}`;

exports[`vmware storage hosts actions fetchDatastores makes the ajax request to the right url 1`] = `
Object {
  "payload": Object {
    "params": Object {
      "cluster_id": "cluster",
    },
  },
  "subtype": "STORAGE_VMWARE_DATASTORES",
  "type": "API_GET",
  "url": "test.com/datastores",
}
`;

exports[`vmware storage hosts actions fetchStoragePods doesnt make the ajax request when cluster is not set 1`] = `Object {}`;

exports[`vmware storage hosts actions fetchStoragePods makes the ajax request to the right url 1`] = `
Object {
  "payload": Object {
    "params": Object {
      "cluster_id": "cluster",
    },
  },
  "subtype": "STORAGE_VMWARE_STORAGEPODS",
  "type": "API_GET",
  "url": "test.com/storage_pods",
}
`;
